default/objects/Fleetcor_Calendar_Month__c/Fleetcor_Calendar_Month__c.object-meta.xml
<CustomObject>
    <label>Fleetcor Calendar Month</label>
    <nameField>
        <label>Fleetcor Calendar Month Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fleetcor Calendar Monthes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>