default/objects/Fleetcor_Calendar_Month__c/fields/Fleetcor_Calendar_Year__c.field-meta.xml
<CustomField>
    <fullName>Fleetcor_Calendar_Year__c</fullName>
    <label>Fleetcor Calendar Year</label>
    <referenceTo>Fleetcor_Calendar_Year__c</referenceTo>
    <relationshipLabel>Fleetcor Calendar Monthes</relationshipLabel>
    <relationshipName>Fleetcor_Calendar_Monthes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>