default/objects/Fleetcor_Calendar_Month__c/fields/Number_of_weeks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_weeks__c</fullName>
    <label>Number of weeks</label>
    <summaryForeignKey>Fleetcor_Calendar_Week__c.Fleetcor_Calendar_Month__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>